# backend/api/docs/swagger.json
@@ -7,6 +7,9 @@
         "/auth/login": {
             "post": {
                 "description": "Authenticates user and returns access token",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -14,6 +17,17 @@
                     "auth"
                 ],
                 "summary": "User Login",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.LoginRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -39,6 +53,9 @@
         "/auth/logout": {
             "post": {
                 "description": "Logs out the user and invalidates token",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -71,6 +88,9 @@
         "/auth/refresh-token": {
             "post": {
                 "description": "Refreshes the authentication token",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -103,6 +123,9 @@
         "/auth/request-token": {
             "post": {
                 "description": "Requests a reset token for user password",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -126,6 +149,9 @@
         "/auth/reset-password": {
             "post": {
                 "description": "Resets user password using the token",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -384,6 +410,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns a list of all users",
                 "produces": [
                     "application/json"
@@ -542,6 +573,27 @@
                     }
                 }
             }
+        }
+    },
+    "definitions": {
+        "handler.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
